# Generic-Asynchronous-IO-Stack

./: .gitattributes  .gitignore  .gitmodules  README.md  debug.md  report1.nsys-rep
GIDS_Setup/GIDS/: CIDS.py  GIDS.py  LLMIDS.py  __init__.py
GIDS_Setup/GIDS.egg-info/: PKG-INFO  SOURCES.txt
bam/: .gitignore  do_cmake.sh
bam/include/: bam_iostack.cuh  ctrl.h  nvm_parallel_queue.h  page_cache.h  queue.h
cnn_evaluation/: README.md  cids_image_transforms.py  cids_load_imagenet1k_to_bam.sh  cids_prepare_dataset.py  cids_prepare_dataset.sh  cids_prepare_dataset_imagenet1k.py  cids_prepare_dataset_imagenet1k.sh  cids_resnet50.py  cids_train_alexnet.py  cids_train_imagenet1k_alexnet.sh  cids_train_imagenet1k_alexnet_compare.sh  cids_train_imagenet1k_alexnet_compare_cold.sh  cids_train_imagenet1k_resnet50.sh  cids_train_imagenet1k_resnet50_compare.sh  cids_train_imagenet1k_resnet50_compare_cold.sh  cids_train_resnet50.py  debug_compare_torch_cids_batch.py
cnn_evaluation/cache_runtime/: README.md  __init__.py  bam_pads.py  bam_policy.py  cids_cached_loader.py  sample_cache.py  sample_importance.py
cnn_evaluation/cids_profile_alexnet/: g124_1486010.1778506353191661924.pt.trace.json
cnn_evaluation/cids_profile_alexnet_registered/: g124_1473060.1778502257746215720.pt.trace.json  g124_1475751.1778503087914589158.pt.trace.json
cnn_evaluation/cids_profile_alexnet_sync/: g124_1472638.1778502227507852350.pt.trace.json  g124_1475372.1778503057999200537.pt.trace.json  g124_1484896.1778506097409062637.pt.trace.json
cnn_evaluation/cids_profile_alexnet_torch_buffered/: g124_1472006.1778502168049527281.pt.trace.json  g124_1474729.1778502999197474027.pt.trace.json  g124_1484345.1778506050243784446.pt.trace.json
cnn_evaluation/cids_profile_alexnet_torch_mmap/: g124_1471247.1778501943914617119.pt.trace.json  g124_1473953.1778502778647361682.pt.trace.json  g124_1483568.1778505831245722054.pt.trace.json
cnn_evaluation/common_tools/: README.md  cids_compare_readback.sh  cids_load_to_bam.py  extract_prepared_prefix.py
cnn_evaluation/dataset_pipeline/: README.md  cids_load_imagenet1k_to_bam.sh  cids_prepare_dataset.sh  cids_prepare_dataset_imagenet1k.sh  load_imagenet1k_pad416_to_bam.sh  load_imagenet1k_pad448_to_bam.sh  prepare_imagenet1k_pad416.sh  prepare_imagenet1k_pad416_bam.sh  prepare_imagenet1k_pad448.sh  prepare_imagenet1k_pad448_bam.sh  run_imagenet1k_pad416_pipeline.sh  run_imagenet1k_pad448_pipeline.sh
cnn_evaluation/dataset_pipeline/imagenet1k_subset_190_20/: README.md  build_subset.py  build_subset.sh  load_pad448_to_bam.sh  prepare_pad448.sh  run_pipeline.sh
cnn_evaluation/imagenet1k_subset_190_20_pad448/: README.md  load_to_bam.sh  train_alexnet.sh  train_alexnet_compare_cold.sh  train_resnet50.sh  train_resnet50_compare_cold.sh
cnn_evaluation/networks/: README.md
cnn_evaluation/networks/alexnet/: README.md  cids_alexnet.py  cids_train_alexnet.py  cids_train_imagenet1k.sh  cids_train_imagenet1k_compare.sh  cids_train_imagenet1k_compare_cold.sh
cnn_evaluation/networks/resnet18/: README.md  cids_resnet18.py  cids_train.py  cids_train.sh  cids_train_imagenet1k.sh
cnn_evaluation/networks/resnet18_legacy/: README.md  cids_resnet18.py  cids_train.py  cids_train.sh  cids_train_imagenet1k.sh
cnn_evaluation/networks/resnet50/: README.md  cids_resnet50.py  cids_train_imagenet1k.sh  cids_train_imagenet1k_compare.sh  cids_train_imagenet1k_compare_cold.sh  cids_train_resnet50.py
evaluation/: GIDS_LJ.sh  GIDS_com.sh  bam_LJ.sh  bam_com.sh  bam_pa.sh  bam_pa_8G_5epoch.sh  bam_uk.sh  bam_uk_8G.sh  bam_uk_8G_5epoch.sh  cids_compare_readback.py  cids_compare_readback.sh  cids_load_imagenet1k_to_bam.sh  cids_load_to_bam.py  cids_load_to_bam.sh  cids_prepare_dataset.py  cids_prepare_dataset.sh  cids_prepare_dataset_imagenet1k.sh  cids_train.py  cids_train.sh  cids_train_imagenet1k.sh  dataloader.py  generate_my_dataset.py  homogenous_train.py  homogenous_train_debug.py  organize_imagenet1k_layout.py  output  output01.txt  page_rank_node_list_gen.sh  run_GIDS_IGBH.sh  run_bam_com.sh  run_bam_uk.sh  run_homogenous_train.sh  run_homogenous_train_debug.sh  run_homogenous_train_debug_small.sh  run_pa_cs.sh  run_uk_cs.sh  scan_async_debug_matrix.sh  tmux_history.txt  write_LJ2ssd.sh  write_com2ssd.sh  (+3 more)
evaluation/cids_profile/: g124_265196.1776858719211312559.pt.trace.json  g124_267855.1776858926695219572.pt.trace.json  g124_270746.1776859145048035824.pt.trace.json  g124_275281.1776860065993806228.pt.trace.json  g124_277654.1776860149556711921.pt.trace.json  g124_281530.1776860727888979216.pt.trace.json  g124_310473.1776941426947776206.pt.trace.json  g124_318575.1776946688569925241.pt.trace.json  g124_323498.1776946886092854332.pt.trace.json  g124_328841.1776947010999500907.pt.trace.json
gids_module/: CMakeLists.txt  agile_host.cuh  do_cmake.sh  gids_kernel.cu  gids_nvme.cu
gids_module/IOStack/: iostack.cuh
gids_module/gids_test/: CMakeLists.txt  compile_test.sh  gids_kernel.cu  gids_test.cu
gids_module/include/: bam_nvme.h
llm_evaluation/: llmids_load_prepared_tokens_to_bam.py  llmids_train_bert_mlm.py  prepare_cluecorpus2020_bert_mlm_dataset.py  run_cluecorpus2020_bert_compare.sh
